# scrcpy-mobile

./: .gitignore  .gitmodules  LICENSE  Makefile  README.md
porting/: Makefile
porting/cmake/: CMakeLists.txt
porting/include/: porting.h  scrcpy-porting.h
porting/scripts/: defines.sh  make-ffmpeg.sh  make-libsdl.sh  make-scrcpy.sh
porting/server/: .gitignore  scrcpy-server
porting/server/src/main/java/com/genymobile/scrcpy/: Controller.java  Device.java
porting/src/: audio_player-porting.c  controller-porting.c  decoder-porting.c  demuxer-porting.c  display-porting.c  main-porting.c  process-porting.c  process-porting.cpp  process-porting.hpp  scrcpy-porting.c  screen-porting.c  screen-porting.m  video_buffer-porting.c
scrcpy-ios/scrcpy-ios/: AppDelegate.h  AppDelegate.m  Info.plist  KeysViewController.h  KeysViewController.m  LogManager.h  LogManager.m  LogsViewController.h  LogsViewController.m  MenubarViewController.h  MenubarViewController.m  PairViewController.h  PairViewController.m  SDLUIKitDelegate+Extend.h  SDLUIKitDelegate+Extend.m  SDL_uikitviewcontroller+Extend.h  SDL_uikitviewcontroller+Extend.m  SceneDelegate.h  SceneDelegate.m  ScrcpyClient.h  ScrcpyClient.m  ScrcpyFormViewController.h  ScrcpyFormViewController.m  ScrcpySwitch.h  ScrcpySwitch.m  ScrcpyTextField.h  ScrcpyTextField.m  UICommonUtils.h  ViewController.h  ViewController.m  main.m
scrcpy-ios/scrcpy-ios.xcodeproj/: project.pbxproj
scrcpy-ios/scrcpy-ios.xcodeproj/project.xcworkspace/xcuserdata/ethan.xcuserdatad/: UserInterfaceState.xcuserstate
scrcpy-ios/scrcpy-ios.xcodeproj/project.xcworkspace/xcuserdata/ethan.xcuserdatad/xcdebugger/: Expressions.xcexplist
scrcpy-ios/scrcpy-ios.xcodeproj/xcshareddata/xcschemes/: scrcpy-ios.xcscheme
scrcpy-ios/scrcpy-ios.xcodeproj/xcuserdata/ethan.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
scrcpy-ios/scrcpy-ios.xcodeproj/xcuserdata/ethan.xcuserdatad/xcschemes/: xcschememanagement.plist
scrcpy-ios/scrcpy-ios/Assets.xcassets/AppIcon.appiconset/: Contents.json
scrcpy-ios/scrcpy-ios/Assets.xcassets/BackIcon.imageset/: Contents.json
scrcpy-ios/scrcpy-ios/Assets.xcassets/DisconnectIcon.imageset/: Contents.json
scrcpy-ios/scrcpy-ios/Assets.xcassets/HomeIcon.imageset/: Contents.json
scrcpy-ios/scrcpy-ios/Assets.xcassets/KeyboardIcon.imageset/: Contents.json
scrcpy-ios/scrcpy-ios/Assets.xcassets/LaunchAppIcon.imageset/: Contents.json
scrcpy-ios/scrcpy-ios/Assets.xcassets/LaunchImage.imageset/: Contents.json
scrcpy-ios/scrcpy-ios/Assets.xcassets/More.imageset/: Contents.json
scrcpy-ios/scrcpy-ios/Assets.xcassets/Refresh.imageset/: Contents.json
scrcpy-ios/scrcpy-ios/Assets.xcassets/Share.imageset/: Contents.json
scrcpy-ios/scrcpy-ios/Assets.xcassets/SwitchAppIcon.imageset/: Contents.json
scrcpy-ios/scrcpy-ios/Assets.xcassets/TouchIcon.imageset/: Contents.json
scrcpy-ios/scrcpy-ios/Assets.xcassets/disconnect.imageset/: Contents.json
scrcpy-ios/scrcpy-ios/Base.lproj/: LaunchScreen.storyboard  Main.storyboard
scrcpy-ios/scrcpy-ios/zh-Hans.lproj/: Localizable.strings
scrcpy-ios/scrcpy-vnc/: HTTPFileResponse+Extend.h  HTTPFileResponse+Extend.m  VNCBrowserViewController.h  VNCBrowserViewController.m  VNCHTTPConnection.h  VNCHTTPConnection.m  VNCUpstreamSocket.h  VNCUpstreamSocket.m  VNCViewController.h  VNCViewController.m  VNCWebSocketify.h  VNCWebSocketify.m
